# ansible-collection-test-runner

./: pyproject.toml  setup.cfg
test_runner/: test_runner.py
