[build-system]
requires = ["setuptools >= 42", "versioningit", ]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test"
]

[tool.versioningit]
[tool.versioningit.vcs]
default-tag = "0.0.0"
[tool.versioningit.write]
file = "test_runner/_version.py"
