[metadata]
name = ansible-collection-test-runner
version = attr: test_runner.__version__
author = pablintino
author_email = pablintino@gotmail.com
url = https://gitlab.internal.pablintino.net/tools/ansible-collection-test-runner
description = Utility tool to run Ansible tests
keywords = ansible, ansible-test
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pyaml==23.9.7

[options.packages.find]
exclude =
    test
    tests

[options.entry_points]
console_scripts =
    ansible-collection-test-runner = test_runner.test_runner:main

[options.extras_require]
dev =
    black==23.3.0
    pytest==7.1.2